tests/cpp/internal/negative_case/parser_debug_qualified_type_top_level_params.cpp
namespace ns { struct S {}; }

ns::S value(
